--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React / Redux workers table app"
     />
-    <title>React App</title>
+    <title>React/Redux workers table</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
